apps/talos-home/networkpolicies/default-deny.yaml
#Default deny means pods in media cannot accept inbound connections from other pods unless you explicitly allow it.
#So even though Jellyseerr can “dial out” to Jellyfin, Jellyfin is not allowed to receive that connection from Jellyseerr (same for Sonarr/Radarr/qBittorrent interconnections).

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: media
spec:
  podSelector: {}
  policyTypes:
    - Ingress
